* Added properties to bridge the intl-tel-input APIs, closes #1. * [Added binding examples](http://justin-lau.github.io/ember-intl-tel-input/#properties-binding). * Enhanced documentation styles for inline code tags.

--- a/tests/dummy/app/styles/_variables.scss
+++ b/tests/dummy/app/styles/_variables.scss
@@ -5,6 +5,8 @@ $bon-jour-grey: #dfd7d4;
 $desert-storm-grey: #f2ece9;
 $solid-coated-warm-grey: #e5dbd6;
 
+$body-bg: $seashell-white;
+
 @import "bootstrap/variables";
 
 $side-nav-sm-columns: 3;
