Switched to ipinfo.io.

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -219,7 +219,8 @@ geoIpLookupFunc: function(callback) {
           <li>Formatting/validation/example number code from Google's <a href="https://github.com/googlei18n/libphonenumber">libphonenumber</a></li>
           <li>Lookup user's country using <a href="http://ipinfo.io/">ipinfo.io</a></li>
         </ul>
-        <p>This demo page uses <a href="http://www.telize.com/">Telize</a> for a fast, SSL-supported, and FREE Geo IP service.</p>
+        <p><s>This demo page uses <a href="http://www.telize.com/">Telize</a> for a fast, SSL-supported, and FREE Geo IP service.</s></p>
+        <p><a href="http://www.cambus.net/adventures-in-running-a-free-public-api/">Telize no longer provides free services due to heavy abuse</a>. This demo page is now using <a href="http://ipinfo.io">ipinfo.io</a> instead.</p>
         <p>The layout and color theme of this very documentation page comes from Twitter's <a href="http://getbootstrap.com/">Bootstrap</a> and <a href="http://emberjs.com/">Ember.js</a>, respectively.</p>
       </section>{{!-- /#about --}}
 
